# netflix-eda-analyse

./: .gitignore  README.md  app.py  main.ipynb  pyproject.toml  requirements.txt
