[project]
name = "mini-projet-netflix"
version = "0.1.0"
description = "Analyse exploratoire du catalogue Netflix"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "wordcloud>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

